--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,8 @@
     --cinza-navbar: #38393D;
     --grey:#4E5153;
     --red:rgb(255, 0, 0);
+    --branco:rgb(208, 208, 208);
+    --azul:rgb(35, 115, 255);
 }
 
 * {
@@ -17,6 +19,7 @@ html {
     font-size: 62.5%;
     overflow-x: hidden;
     scroll-behavior: smooth;
+    background-color: var(--branco);
 }
 
 .inputFoto{
@@ -48,7 +51,8 @@ input[type="file"]{
 .Container-superior .Header{
     display: flex;
     justify-content: center;
-    background: var(--cinza-navbar);
+    background: var(--azul);
+    box-shadow: 2px 2px 4px black;
     width: 100%;
     height: 5rem;
     position: fixed;
@@ -61,7 +65,7 @@ input[type="file"]{
 
 .Container-superior .Container-box{
     display: flex;
-    background: var(--grey);
+    background: var(--branco);
 }
 
 #pdf-container {
@@ -89,7 +93,9 @@ input[type="file"]{
 
 /* container lateral */
 .Container-superior .Container-box .container-lateral{
-    background: var(--cinza-navbar);
+    background: rgb(196, 217, 255);
+    /* border: 2px solid black; */
+    box-shadow: 2px 2px 4px black;
     width: 10rem;
     display: flex;
     flex-direction: column;
@@ -117,7 +123,7 @@ input[type="file"]{
 .Container-superior .Container-box .container-lateral .container-icons .container-icons__primeiro,.Container-superior .Container-box .container-lateral .container-icons .container-icons__segundo,.Container-superior .Container-box .container-lateral .container-icons .container-icons__quarto,.Container-superior .Container-box .container-lateral .container-icons .container-icons__quinto{
     height: 5rem;
     width: 5rem;
-    background: var(--preto);
+    background: var(--azul);
     border-radius: 30%;
     text-align: center;
     margin-bottom: 1rem;
@@ -128,7 +134,7 @@ input[type="file"]{
 .Container-superior .Container-box .container-lateral .container-icons .container-icons__terceiro{
     height: 5rem;
     width: 5rem;
-    background: var(--preto);
+    background: var(--azul);
     border-radius: 30%;
     text-align: center;
     margin-bottom: 1rem;
